
New: It is now possible to use NFS/CIFS/SSHFS/etc. connection strings for filesystem path. Examples:
        check filesystem mynfs with path "192.168.1.123:/home/myuser"
        check filesystem mycifs with path "//192.168.1.123/documents"
        check filesystem mysshfs with path "myuser@192.168.1.123:/home/myuser"

New: Report filesystem type in the status output

New: Linux and Solaris: cache per-filesystem mount table status and refresh only if changed (some filesystem mounted/unmounted).

New: The Monit HTTP interface now allows to set the SSL/TLS version as well. The
syntax follows the generic SSL/TLS options settings, which was introduced in
Monit 5.15, example:
    set httpd port 2812
        with ssl {
           pemfile: /etc/ssl/certs/monit.pem
           version: TLSv12
        }
        allow admin:monit

New: The SSL 3DES ciphers are disabled by default now (vulnerable to Sweet32 attacks).

New: Issue #509: Added support to override the SSL/TLS ciphers list and enabled
server-side ciphers preference. Example (using monit's default ciphers string):
    set ssl {
        ciphers: "ALL:!DES:!3DES:!RC4:!aNULL:!LOW:!EXP:!IDEA:!MD5:@STRENGTH"
    }

New: The certificate minimum valid days test now triggers the timestamp event instead
of connection event.

New: M/Monit: show MacOS version instead of Darwin kernel version.

New: Show textual representation of filesystem flags instead of numeric.

Fixed: Previous Monit versions may be unable to detect that the filesystem is not
mounted in the case that mountpoint was used as a filesystem path. The reason is,
that the mountpoint itself resides on some filesystem (for example root filesystem)
and thus even if the filesystem is not mounted, the directory may still exist - Monit
didn't require exact match in the mount table and allowed filesystem subdirectory or even
regular file to be used as filesystem path. The exact mountpoint match is now required,